--- a/README.org
+++ b/README.org
@@ -90,6 +90,38 @@ will have after $n$ months in this investment adding $y$ moneys each month.
 
 * The Solution
 
+The solution for this problem is pretty straightforward since we already have
+derived the equations for it. Now it's just a matter of implementing it using
+some programming language.
+
+In this example I'm going to pick F#, but in your scenario feel free to use the
+language you're more comfortable with.
+
+#+BEGIN_SRC fsharp
+  let X_0 = 10e3 // 10,000.00 moneys
+  let Y   = 1e3  // 1,000 moneys per month
+  let H   = 1.01 // 1% of increase
+  let N   = 120  // 10 years = 120 months
+
+  let rec calcMoney (x0: float) (y: float) (h: float) (nMonth: int): float =
+      match nMonth with
+      | 0 -> x0
+      | _ when (nMonth > 0) ->
+          let previousValue = calcMoney (x0) (y) (h) (nMonth - 1)
+          (previousValue * h) + y
+      | _ -> 0
+
+  let resultMoney = calcMoney (X_0) (Y) (H) (N)
+
+  printfn """
+  Initial money: %.2f
+  Addition per month: %.2f
+  Increase rate per month: %.2f
+  Investment time: %i months
+  Final value: %.2f moneys
+  """ (X_0) (Y) (H) (N) (resultMoney)
+#+END_SRC
+
 * References
 
 [1] - https://en.wikipedia.org/wiki/Literate_programming
